# fastapi-study

./: .gitignore  README.md  pyproject.toml
week1/: main.py  test_main.py
week1-appendix/: pyproject.toml
week1-appendix/sources/: database.py  main.py  models.py  schemas.py
week1-appendix/sources/tests/: conftest.py  factories.py  test_main.py  test_models.py  testdb
week2/: README.md  cors.py  pyproject.toml  sql_app.db
week2/01_security/: main.py  main2.py  main3.py  main4.py  test_main.py  test_main2.py  test_main3.py  test_main4.py
week2/02_middleware/: main.py  test_main.py
week2/03_cors/: test_cors.py
week2/04_sql_app/: crud.py  main.py  test_sql.py
week2/05_bigger_app/: dependencies.py  main.py  test_main.py
week2/06_background/: main2.py
week2/07_metadata/: main.py  main3.py  test_main3.py
week2/08_static_files/: main.py
week2/09_debugging/: main.py
week2/background/: main.py  test_main.py  test_main2.py
week2/bigger_app/routers/: items.py  users.py
week2/metadata/: main2.py
week2/sql_app/: database.py  models.py  schemas.py
week2/tests/: test_cors.py
